--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,17 @@
         "psr/cache": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.6.*"
+        "phpunit/phpunit": "^5.6",
+        "php-coveralls/php-coveralls": "^2.1"
     },
     "autoload": {
         "psr-4": {
-            "TinyCache\\": ["src/","tests/"]
-        },
-        "files": [
-        ]
+            "TinyCache\\": "src/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
-            "TinyCache\\": ["src/","tests/"]
+            "TinyCache\\": "tests/"
         }
     },
     "extra": {
